--- a/index.html
+++ b/index.html
@@ -3,44 +3,34 @@
 	<head>
 		<meta charset="utf-8" />
 	    <title>Backbone Marionette Template App</title>
-	    <meta name="description" content="" />
-	    <meta name="author" content="" />
+	    <meta name="description" content="Backbone Marionette Template App" />
+	    <meta name="author" content="Shekhar Kumar (shekhar.mnnit10@gmail.com)" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		
-		<script type="text/javascript" src="libs/underscore.min.js"></script>	    
-		<script type="text/javascript" src="libs/jquery.min.js"></script>
-		<script type="text/javascript" src="libs/backbone.min.js"></script>
-		<script type="text/javascript" src="libs/backbone.marionette.min.js"></script>
 
-		<script type="text/javascript" src="libs/require.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap-multiselect.min.css">
 
-		<script type="text/javascript" src="libs/bootstrap.min.js"></script>	    		
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" />
+		<!-- Load the script "js/main.js" as our entry point -->
+		<script type="text/javascript" data-main="src/main" src="libs/require.min.js"></script>
 
-		<script type="text/javascript" src="libs/bootstrap-multiselect.min.js"></script>
-		<link rel="stylesheet" href="css/bootstrap-multiselect.min.css" type="text/css"/>
-
-		<script type="text/javascript" src="app.js"></script>
 	</head>
 
 	<body>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<div id="header">
-				</div>
+				<div id="header"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<div id="content">
-				</div>
+				<div id="main-content"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<div id="footer">
-				</div>
+				<div id="footer"></div>
 			</div>
 		</div>
 	</div>
